fixed homepage ref and crescent moon position

--- a/infopage.html
+++ b/infopage.html
@@ -42,7 +42,7 @@
         <!-- The Card itself -->
         <div class="card">
           <div class="inner-border"></div>
-          <a href="weddingwebsite.html"><div class="header-container">
+          <a href="index.html"><div class="header-container">
             <div class="header-names">Francesca e Mattia</div>
             <div class="crescent-moon"></div>
           </div></a>
@@ -62,7 +62,7 @@
               
             </div>
 
-            <a href="weddingwebsite.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Go back</div></a>
+            <a href="index.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Go back</div></a>
         </div>
         
       </div>
