Added icons, fixed mobile view

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- The Card itself -->
         <div class="card">
           <div class="inner-border"></div>
-          <div class="crescent-moon"></div>
+          <div class="crescent-moon homepage-moon"></div>
           <div class="text-content">
             <h1 class="names">Francesca <span id="and">e</span> Mattia</h1>
             <div class="info">            
