--- a/infopage.html
+++ b/infopage.html
@@ -40,11 +40,11 @@
         <div class="floral floral-bottom-right bottom-right-alt"></div>
 
         <!-- The Card itself -->
-        <div class="card">
+        <div class="card bigger">
           <div class="inner-border"></div>
           <a href="index.html"><div class="header-container">
-            <div class="header-names">Francesca e Mattia</div>
-            <div class="crescent-moon"></div>
+            <div class="header-names">Francesca <div class="crescent-moon"></div>e Mattia </div>
+            
           </div></a>
           <div class="text-content">
             <div class="info centered">   
@@ -54,10 +54,11 @@
             </div>
 
               <div class="grid-2x2">
-                <div class="grid-cell">Cell 1</div>
-                <div class="grid-cell">Cell 2</div>
-                <div class="grid-cell">Cell 3</div>
-                <div class="grid-cell">Cell 4</div>
+                <div class="grid-cell"><img src="img/travel.png" class="icon" alt="Date">Travel</div>
+                <div class="grid-cell"><img src="img/accommodation.png" class="icon" alt="Date">Accommodation</div>
+                <div class="grid-cell"><img src="img/plan.png" class="icon" alt="Date">Plan</div>
+                <div class="grid-cell"><img src="img/gifts.png" class="icon" alt="Date">Gifts</div>
+                <div class="grid-cell grid-centered"><img src="img/rsvp.png" class="icon" alt="Date">RSVP</div>
               </div>
               
             </div>
