Fixed button links and button colours

--- a/infopage.html
+++ b/infopage.html
@@ -54,11 +54,12 @@
             </div>
 
               <div class="grid-2x2">
-                <div class="grid-cell"><img src="img/travel.png" class="icon" alt="Date">Travel</div>
-                <div class="grid-cell"><img src="img/accommodation.png" class="icon" alt="Date">Accommodation</div>
-                <div class="grid-cell"><img src="img/plan.png" class="icon" alt="Date">Plan</div>
-                <div class="grid-cell"><img src="img/gifts.png" class="icon" alt="Date">Gifts</div>
-                <div class="grid-cell grid-centered"><img src="img/rsvp.png" class="icon" alt="Date">RSVP</div>
+                <a href=# class="grid-cell grid-centered mobile-only invert-color"><img src="img/rsvp.png" class="icon" alt="Date">RSVP</a>
+                <a href=# class="grid-cell"><img src="img/travel.png" class="icon" alt="Date">Travel</a>
+                <a href=# class="grid-cell"><img src="img/accommodation.png" class="icon" alt="Date">Accommodation</a>
+                <a href=# class="grid-cell"><img src="img/plan.png" class="icon" alt="Date">Plan</a>
+                <a href=# class="grid-cell"><img src="img/gifts.png" class="icon" alt="Date">Gifts</a>
+                <a href=# class="grid-cell grid-centered pc-only invert-color"><img src="img/rsvp.png" class="icon" alt="Date">RSVP</a>
               </div>
               
             </div>
