--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Love+Light&family=Sacramento&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Love+Light&family=Sacramento&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
 
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -22,7 +22,7 @@
 
 <body>
   
-  <div class="overlay delayOut"><div class="crescent-moon"></div></div>
+  <div class="overlay delayOut"><div class="crescent-moon loader"></div></div>
   <!-- 1. Wrapper that hides overflow-x -->
   <div class="page-overflow-wrap">
     
@@ -50,7 +50,7 @@
             <div class="buttons">
                 <ul>
     <li>
-      <a class="animated-arrow" href="infopage.html">
+      <a class="animated-arrow" href="it/infopage.html">
         <span class="the-arrow -left">
           <span class="shaft"></span>
         </span>
@@ -65,7 +65,7 @@
       </a>
     </li>
     <li>
-      <a class="animated-arrow" href="infopage.html">
+      <a class="animated-arrow" href="en/infopage.html">
         <span class="the-arrow -left">
           <span class="shaft"></span>
         </span>
@@ -89,9 +89,6 @@
     </div>
   </div>
 </body>
-
-
-<script src="src/translate.js"></script>
 
 
 </html>
