--- a/it/RSVP.html
+++ b/it/RSVP.html
@@ -12,10 +12,11 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../img/site.webmanifest">
+
 
   <link href="../src/style.css" rel="stylesheet">
 
@@ -49,6 +50,8 @@
           <div class="text-content">
             <div class="info centered">   
               
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3okAAlA-zH-3E0Wq2y-ktguLLsJy_-3lkVl3jrtF01NXQvQ/viewform?embedded=true" width="100%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
             </div>
               
           </div>
