--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wedding Invitation</title>
+  <title>Wedding invitation - Francesca e Mattia</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
         <div class="card">
           <div class="inner-border"></div>
           <div class="crescent-moon homepage-moon"></div>
-          <div class="text-content">
+          <div class="text-content homepage-content">
             <h1 class="names">Francesca <span id="and">e</span> Mattia</h1>
             <div class="info">            
               <p>05 Set 2026</p>
