fixed mobile view

--- a/en/infopage.html
+++ b/en/infopage.html
@@ -41,7 +41,7 @@
         <div class="floral floral-bottom-right bottom-right-alt"></div>
 
         <!-- The Card itself -->
-        <div class="card bigger">
+        <div class="card biggest">
           <div class="inner-border"></div>
           
           <a href="../index.html">
