--- a/it/travel.html
+++ b/it/travel.html
@@ -69,7 +69,7 @@
               <br>
               <p>Raggiungere la location da Bellagio con i mezzi pubblici è complicato. Raccomandiamo di raggiungere la zona in auto, per maggiore flessibilità e comodità negli spostamenti, poiché i    taxi non sono disponibili.</p>
               <br>
-              <p>Vi preghiamo di farci sapere i dettagli del vostro viaggio: vi aiuteremo a raggiungere la location e organizzare eventuali passaggi condivisi</p>
+              <p>Vi preghiamo di farci sapere i dettagli del vostro viaggio: vi aiuteremo a raggiungere la location e organizzare eventuali viaggi condivisi</p>
 
               
             </div>
@@ -89,4 +89,5 @@
 
 
 </html>
+
 
