fixed typo in en/gifts

--- a/en/gifts.html
+++ b/en/gifts.html
@@ -60,7 +60,7 @@
               <img src="../img/gifts.png" class="icon centered-img" alt="Date">
               <h2 class="spaced-heading">Wedding gifts</h2>
 
-              <p>Money does not make happeniss, but a honeymoon may :)</p>
+              <p>Money does not make happyness, but a honeymoon may :)</p>
               <br>
               <p>Our greatest wish is for you to be part of our special day, but if you would like to contribute to our honeymoon, you can use these details</p>
               <br>
@@ -87,3 +87,4 @@
 
 
 </html>
+
