--- a/en/RSVP.html
+++ b/en/RSVP.html
@@ -71,7 +71,7 @@
               
           </div>
 
-            <a href="../en/infopage.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Indietro</div></a>
+            <a href="../en/infopage.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Back</div></a>
         </div>
         
       </div>
@@ -84,4 +84,5 @@
 
 
 </html>
+
 
