--- a/en/infopage.html
+++ b/en/infopage.html
@@ -72,7 +72,7 @@
               
             </div>
 
-            <a href="../index.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Go back</div></a>
+            <a href="../index.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Indietro</div></a>
         </div>
         
       </div>
@@ -85,3 +85,4 @@
 
 
 </html>
+
