--- a/en/thankyou.html
+++ b/en/thankyou.html
@@ -68,7 +68,7 @@
               
           </div>
 
-            <a href="../en/infopage.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Go back</div></a>
+            <a href="../en/infopage.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Back</div></a>
         </div>
         
       </div>
@@ -79,3 +79,4 @@
 
 
 </html>
+
