fixed back button (thanks Jon)

--- a/en/travel.html
+++ b/en/travel.html
@@ -76,7 +76,7 @@
               
           </div>
 
-            <a href="../en/infopage.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Go back</div></a>
+            <a href="../en/infopage.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Back</div></a>
         </div>
         
       </div>
@@ -87,3 +87,4 @@
 
 
 </html>
+
