--- a/it/infopage.html
+++ b/it/infopage.html
@@ -71,7 +71,7 @@
               
             </div>
 
-            <a href="../index.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Indietro</div></a>
+            <a href="../index.html"><div class="back"><i class="fa fa-angle-left" aria-hidden="true"></i>   Back</div></a>
           </div>
         
         </div>
@@ -82,3 +82,4 @@
 
 
 </html>
+
